One Pipe working

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,4 +1,4 @@
-i-banco-terminal: i-banco commandlinereader.o
+i-banco-terminal: i-banco commandlinereader.o i-banco-terminal.o
 	gcc -o i-banco-terminal i-banco-terminal.o commandlinereader.o
 i-banco:  contas.o i-banco.o
 	gcc -pthread -o i-banco i-banco.o  contas.o 
@@ -6,7 +6,7 @@ commandlinereader.o: commandlinereader.c
 	gcc -g -Wall -pedantic -c commandlinereader.c
 contas.o: contas.c contas.h
 	gcc -g -Wall -pedantic -c contas.c
-i-banco.o: i-banco.c
+i-banco.o: i-banco.c 
 	gcc -g -Wall -pedantic -c i-banco.c
 i-banco-terminal.o: i-banco-terminal.c
 	gcc -g -Wall -pedantic -c i-banco-terminal.c
